--- a/_footer.scss
+++ b/_footer.scss
@@ -1,4 +1,69 @@
-footer {
-  width: 20rem;
-  height: 20rem;
+.footer {
+  width: 30rem;
+  position: fixed;
+  bottom: 3rem;
+  left: 1.5rem;
+
+  &__p {
+    font-size: 1.8rem;
+  }
+
+  &__copyright {
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin-bottom: 2rem;
+    a {
+      color: black;
+
+      :hover {
+        text-decoration: none;
+        cursor: pointer;
+      }
+    }
+  }
+
+  &__contact {
+    font-size: 1.8rem;
+    font-weight: 500;
+    a {
+      color: black;
+      &:hover {
+        text-decoration: none;
+        cursor: pointer;
+      }
+    }
+  }
+}
+
+.email {
+  position: absolute;
+  top: 2rem;
+  right: 1.5rem;
+  font-size: 1.8rem;
+  a {
+      color: black;
+      text-decoration: none;
+      &:hover {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+  }
+}
+
+.issue-reference {
+    position: fixed;
+    bottom: 4rem;
+    right: 1.5rem;
+
+    li {
+        list-style-type: none;
+        a {
+            font-size: 1.8rem;
+            color: black;
+            text-decoration: none;
+            &:hover {
+                text-decoration: underline;
+            }
+        }
+    }
 }
