--- a/_typography.scss
+++ b/_typography.scss
@@ -22,7 +22,7 @@
     font-size: 1.5rem;
     a {
       text-decoration: none;
-      color: $color-primary-6;
+    //   color: $color-primary-6;
       &:hover {
         text-decoration: underline;
         cursor: pointer;
@@ -33,8 +33,8 @@
   a {
     font-size: 1.5rem;
     text-decoration: none;
-    font-weight: $font-weight-sb;
-    color: $color-primary-6;
+    // font-weight: $font-weight-sb;
+    // color: $color-primary-6;
     &:hover {
       text-decoration: underline;
     }
