fix intersection observer in appjs

--- a/_base.scss
+++ b/_base.scss
@@ -26,6 +26,7 @@ body {
     font-family: $font-primary;
     font-size: 1.5rem;
     line-height: 1.6;
+    transition: 500ms background-color;
 }
 
 ::-webkit-scrollbar {
