--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,8 @@ body {
   font-family: "Roboto", san-serif;
   font-size: 1.5rem;
   line-height: 1.6;
+  -webkit-transition: 500ms background-color;
+  transition: 500ms background-color;
 }
 
 ::-webkit-scrollbar {
