starting small display

--- a/_base.scss
+++ b/_base.scss
@@ -9,6 +9,13 @@ $font-weight-nm: 400;
 $font-weight-bd: 500;
 $font-weight-sb: 700;
 
+$bp-largest: 75em; // 1200px
+$bp-large: 68.75em; // 1100px
+$bp-medium: 56.25em; // 900px
+$bp-small: 37.5em; // 600px
+$bp-tiny: 31.25em; // 500px
+$bp-super-tiny: 25em; // 400px
+
 *,
 *::after,
 *::before {
@@ -26,7 +33,7 @@ body {
     font-family: $font-primary;
     font-size: 1.5rem;
     line-height: 1.6;
-    transition: 500ms background-color;
+    transition: background-color 500ms ease-out 200ms;
 }
 
 ::-webkit-scrollbar {
