media query almost done

--- a/_base.scss
+++ b/_base.scss
@@ -4,15 +4,15 @@
 //NOTE: Font-Family
 $font-primary: 'Roboto', san-serif;
 //NOTE: Font-weight
-$-font-weight-sm: 300;
+$font-weight-sm: 300;
 $font-weight-nm: 400;
 $font-weight-bd: 500;
 $font-weight-sb: 700;
 
 $bp-largest: 75em; // 1200px
-$bp-large: 68.75em; // 1100px
-$bp-medium: 56.25em; // 900px
-$bp-small: 37.5em; // 600px
+$bp-large: 65em; // 1040px
+$bp-medium: 59.375em; // 950px / 16
+$bp-small: 43.75em; // 700px / 16
 $bp-tiny: 31.25em; // 500px
 $bp-super-tiny: 25em; // 400px
 
@@ -27,6 +27,10 @@ $bp-super-tiny: 25em; // 400px
 html {
     box-sizing: border-box;
     font-size: 62.5%;
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
 }
 
 body {
