--- a/_footer.scss
+++ b/_footer.scss
@@ -4,6 +4,13 @@
   bottom: 3rem;
   left: 1.5rem;
 
+  @media only screen and (max-width: $bp-small) {
+    width: 80%;
+    margin: 2rem;
+    margin-bottom: 0;
+    text-align: center;
+  }
+
   &__p {
     font-size: 1.8rem;
   }
@@ -40,6 +47,17 @@
   top: 2rem;
   right: 1.5rem;
   font-size: 1.8rem;
+
+  @media only screen and (max-width: $bp-small) {
+    top: 95vh;
+}
+
+@media only screen and (max-width: $bp-tiny) {
+  position: static;
+  text-align: center;
+  margin-top: 1rem;
+}
+
   a {
       color: black;
       text-decoration: none;
@@ -54,6 +72,10 @@
     position: fixed;
     bottom: 4rem;
     right: 1.5rem;
+
+    @media only screen and (max-width: $bp-small) {
+      display:none;
+    }
 
     li {
         list-style-type: none;
