--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,140 @@
-header .logo{max-width:26rem;width:100%;padding-top:2rem;margin-left:1.5rem;position:fixed}.section-container{text-align:center;margin:0 auto;width:100%;height:100vh;scroll-behavior:smooth;overflow:auto;scroll-snap-type:y mandatory}.issue{width:100%;height:100vh;scroll-snap-align:start}.issue__number{font-size:1.8rem;margin-bottom:1.5rem}.issue__store{font-size:1.5rem}.issue__store a{text-decoration:none}.issue__store a:hover{text-decoration:underline;cursor:pointer}.issue a{font-size:1.5rem;text-decoration:none}.issue a:hover{text-decoration:underline}.footer{width:30rem;position:fixed;bottom:3rem;left:1.5rem}.footer__p{font-size:1.8rem}.footer__copyright{font-size:1.2rem;font-weight:300;margin-bottom:2rem}.footer__copyright a{color:black}.footer__copyright a :hover{text-decoration:none;cursor:pointer}.footer__contact{font-size:1.8rem;font-weight:500}.footer__contact a{color:black}.footer__contact a:hover{text-decoration:none;cursor:pointer}.email{position:absolute;top:2rem;right:1.5rem;font-size:1.8rem}.email a{color:black;text-decoration:none}.email a:hover{text-decoration:underline;cursor:pointer}.issue-reference{position:fixed;bottom:4rem;right:1.5rem}.issue-reference li{list-style-type:none}.issue-reference li a{font-size:1.8rem;color:black;text-decoration:none}.issue-reference li a:hover{text-decoration:underline}*,*::after,*::before{margin:0;padding:0;box-sizing:inherit}html{box-sizing:border-box;font-size:62.5%}body{font-family:"Roboto", san-serif;font-size:1.5rem;line-height:1.6;transition:500ms background-color}::-webkit-scrollbar{width:1rem}.bold{font-weight:700}.issue img{width:42rem}
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  box-sizing: border-box;
+  font-size: 62.5%; }
+  @media only screen and (max-width: 65em) {
+    html {
+      font-size: 50%; } }
+
+body {
+  font-family: "Roboto", san-serif;
+  font-size: 1.5rem;
+  line-height: 1.6;
+  transition: background-color 500ms ease-out 200ms; }
+
+::-webkit-scrollbar {
+  width: 1rem; }
+
+.bold {
+  font-weight: 700; }
+
+header .logo {
+  max-width: 26rem;
+  width: 100%;
+  padding-top: 2rem;
+  margin-left: 1.5rem;
+  position: fixed; }
+
+@media only screen and (max-width: 43.75em) {
+  header {
+    position: static; } }
+
+.section-container {
+  text-align: center;
+  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
+  scroll-behavior: smooth;
+  overflow: auto;
+  scroll-snap-type: y mandatory;
+  transition: all 700ms ease 0ms; }
+
+.issue {
+  width: 100%;
+  height: 100vh;
+  scroll-snap-align: start;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+  .issue__number {
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem; }
+  .issue__store {
+    font-size: 1.5rem; }
+    .issue__store a {
+      text-decoration: none; }
+      .issue__store a:hover {
+        text-decoration: underline;
+        cursor: pointer; }
+  .issue a {
+    font-size: 1.5rem;
+    text-decoration: none; }
+    .issue a:hover {
+      text-decoration: underline; }
+
+.footer {
+  width: 30rem;
+  position: fixed;
+  bottom: 3rem;
+  left: 1.5rem; }
+  @media only screen and (max-width: 43.75em) {
+    .footer {
+      width: 80%;
+      margin: 2rem;
+      margin-bottom: 0;
+      text-align: center; } }
+  .footer__p {
+    font-size: 1.8rem; }
+  .footer__copyright {
+    font-size: 1.2rem;
+    font-weight: 300;
+    margin-bottom: 2rem; }
+    .footer__copyright a {
+      color: black; }
+      .footer__copyright a :hover {
+        text-decoration: none;
+        cursor: pointer; }
+  .footer__contact {
+    font-size: 1.8rem;
+    font-weight: 500; }
+    .footer__contact a {
+      color: black; }
+      .footer__contact a:hover {
+        text-decoration: none;
+        cursor: pointer; }
+
+.email {
+  position: absolute;
+  top: 2rem;
+  right: 1.5rem;
+  font-size: 1.8rem; }
+  @media only screen and (max-width: 43.75em) {
+    .email {
+      top: 95vh; } }
+  @media only screen and (max-width: 31.25em) {
+    .email {
+      position: static;
+      text-align: center;
+      margin-top: 1rem; } }
+  .email a {
+    color: black;
+    text-decoration: none; }
+    .email a:hover {
+      text-decoration: underline;
+      cursor: pointer; }
+
+.issue-reference {
+  position: fixed;
+  bottom: 4rem;
+  right: 1.5rem; }
+  @media only screen and (max-width: 43.75em) {
+    .issue-reference {
+      display: none; } }
+  .issue-reference li {
+    list-style-type: none; }
+    .issue-reference li a {
+      font-size: 1.8rem;
+      color: black;
+      text-decoration: none; }
+      .issue-reference li a:hover {
+        text-decoration: underline; }
+
+.issue img {
+  width: 42rem; }
