media query fix for smaller displays

--- a/_base.scss
+++ b/_base.scss
@@ -31,6 +31,10 @@ html {
     @media only screen and (max-width: $bp-large) {
         font-size: 50%;
     }
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 35%;
+    }
 }
 
 body {
