--- a/_gallery.scss
+++ b/_gallery.scss
@@ -1,5 +1,9 @@
 .issue {
     img {
         width: 42rem;
+
+        @media only screen and (max-width: $bp-tiny) {
+            width: 35rem;
+        }
     }
 }
