--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,9 @@ html {
   @media only screen and (max-width: 65em) {
     html {
       font-size: 50%; } }
+  @media only screen and (max-width: 65em) {
+    html {
+      font-size: 35%; } }
 
 body {
   font-family: "Roboto", san-serif;
@@ -76,10 +79,14 @@ header .logo {
   left: 1.5rem; }
   @media only screen and (max-width: 43.75em) {
     .footer {
-      width: 80%;
-      margin: 2rem;
+      width: 90%;
+      margin: 1rem;
+      padding: 2rem;
       margin-bottom: 0;
-      text-align: center; } }
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center; } }
   .footer__p {
     font-size: 1.8rem; }
   .footer__copyright {
@@ -112,7 +119,7 @@ header .logo {
     .email {
       position: static;
       text-align: center;
-      margin-top: 1rem; } }
+      margin-top: 1.5rem; } }
   .email a {
     color: black;
     text-decoration: none; }
@@ -138,3 +145,6 @@ header .logo {
 
 .issue img {
   width: 42rem; }
+  @media only screen and (max-width: 31.25em) {
+    .issue img {
+      width: 35rem; } }
