--- a/_footer.scss
+++ b/_footer.scss
@@ -5,7 +5,7 @@
   left: 1.5rem;
 
   @media only screen and (max-width: $bp-small) {
-    width: 90%;
+    width: 60rem;
     margin: 1rem;
     padding: 2rem;
     margin-bottom: 0;
@@ -13,6 +13,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    bottom: 1.5rem;
   }
 
   &__p {
@@ -52,15 +53,15 @@
   right: 1.5rem;
   font-size: 1.8rem;
 
-  @media only screen and (max-width: $bp-small) {
-    top: 95vh;
-}
+//   @media only screen and (max-width: $bp-small) {
+//     top: 95vh;
+// }
 
-@media only screen and (max-width: $bp-tiny) {
-  position: static;
-  text-align: center;
-  margin-top: 1.5rem;
-}
+// @media only screen and (max-width: $bp-tiny) {
+//   position: static;
+//   text-align: center;
+//   margin-top: 1.5rem;
+// }
 
   a {
       color: black;
