--- a/_header.scss
+++ b/_header.scss
@@ -4,6 +4,10 @@ header .logo {
     padding-top: 2rem;
     margin-left: 1.5rem;
     position: fixed;
+    @media only screen and (max-width: $bp-tiny) {
+        width: 20rem;
+    }
+
 
 }
 
