--- a/css/main.css
+++ b/css/main.css
@@ -33,6 +33,9 @@ header .logo {
   padding-top: 2rem;
   margin-left: 1.5rem;
   position: fixed; }
+  @media only screen and (max-width: 31.25em) {
+    header .logo {
+      width: 20rem; } }
 
 @media only screen and (max-width: 43.75em) {
   header {
@@ -79,14 +82,15 @@ header .logo {
   left: 1.5rem; }
   @media only screen and (max-width: 43.75em) {
     .footer {
-      width: 90%;
+      width: 60rem;
       margin: 1rem;
       padding: 2rem;
       margin-bottom: 0;
       text-align: center;
       display: flex;
       flex-direction: column;
-      align-items: center; } }
+      align-items: center;
+      bottom: 1.5rem; } }
   .footer__p {
     font-size: 1.8rem; }
   .footer__copyright {
@@ -112,14 +116,6 @@ header .logo {
   top: 2rem;
   right: 1.5rem;
   font-size: 1.8rem; }
-  @media only screen and (max-width: 43.75em) {
-    .email {
-      top: 95vh; } }
-  @media only screen and (max-width: 31.25em) {
-    .email {
-      position: static;
-      text-align: center;
-      margin-top: 1.5rem; } }
   .email a {
     color: black;
     text-decoration: none; }
