--- a/_footer.scss
+++ b/_footer.scss
@@ -5,15 +5,14 @@
   left: 1.5rem;
 
   @media only screen and (max-width: $bp-small) {
-    width: 60rem;
+    width: 100%;
     margin: 1rem;
-    padding: 2rem;
-    margin-bottom: 0;
+    padding: 1rem;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    bottom: 1.5rem;
+    bottom: .5rem
   }
 
   &__p {
