--- a/css/main.css
+++ b/css/main.css
@@ -35,7 +35,7 @@ header .logo {
   position: fixed; }
   @media only screen and (max-width: 31.25em) {
     header .logo {
-      width: 20rem; } }
+      width: 18rem; } }
 
 @media only screen and (max-width: 43.75em) {
   header {
@@ -82,15 +82,14 @@ header .logo {
   left: 1.5rem; }
   @media only screen and (max-width: 43.75em) {
     .footer {
-      width: 60rem;
+      width: 100%;
       margin: 1rem;
-      padding: 2rem;
-      margin-bottom: 0;
+      padding: 1rem;
       text-align: center;
       display: flex;
       flex-direction: column;
       align-items: center;
-      bottom: 1.5rem; } }
+      bottom: .5rem; } }
   .footer__p {
     font-size: 1.8rem; }
   .footer__copyright {
