--- a/_footer.scss
+++ b/_footer.scss
@@ -5,14 +5,14 @@
   left: 1.5rem;
 
   @media only screen and (max-width: $bp-small) {
-    width: 100%;
-    margin: 1rem;
+    max-width: 30rem;
+    margin: 1rem 0 0 0;
     padding: 1rem;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    bottom: .5rem
+    bottom: .1rem
   }
 
   &__p {
