--- a/_footer.scss
+++ b/_footer.scss
@@ -19,6 +19,7 @@
     width: 100%;
     margin: 0 auto;
     padding: 1rem;
+    line-height: 1.4;
   }
 
   &__p {
@@ -28,7 +29,7 @@
   &__copyright {
     font-size: 1.2rem;
     font-weight: 300;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
     a {
       color: black;
 
