anchor color fix

--- a/_footer.scss
+++ b/_footer.scss
@@ -15,7 +15,7 @@
     left: 0;
   }
 
-  @media only screen and (max-width: $bp-super-tiny) {
+  @media only screen and (max-width: $bp-tiny) {
     width: 100%;
     margin: 0 auto;
     padding: 1rem;
