--- a/css/main.css
+++ b/css/main.css
@@ -75,6 +75,12 @@ header .logo {
     .issue a:hover {
       text-decoration: underline; }
 
+.color-correction1 a {
+  color: #e568ac; }
+
+#selected-stores, .issue__purchase {
+  color: #fff; }
+
 .footer {
   width: 30rem;
   position: fixed;
